# Animura

./: .gitattributes  .gitignore  Animura.rc  Animura.sln  Animura.vcxproj  Animura.vcxproj.filters  CMakeLists.txt  CMakePresets.json  ColorDialogHelper.hpp  IWallpaperModule.hpp  LICENSE.txt  ModuleCatalog.hpp  ModuleLibrary.cpp  PROMPT.md  README.md  SettingsGroup.qml  SettingsPanel.qml  WallpaperCard.qml  WallpaperController.cpp  WallpaperController.hpp  cpp.hint  main.cpp  qml.qrc  resource.h
cmake/: build-frontend.cmake
docs/: agent-context.md  architecture.md  build-system.md  example-module.md  host.md  modules.md  project-structure.md  runtime.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  main.tsx
frontend/src/bridge/: native.ts
frontend/src/components/: ColorPicker.tsx  Header.tsx  ModuleCard.tsx  ModuleGrid.tsx  Notification.tsx  SettingsControl.tsx  SettingsPanel.tsx  Tooltip.tsx
frontend/src/hooks/: useBackend.ts  useNotifications.ts
frontend/src/theme/: tokens.css
frontend/src/types/: index.ts
include/animura/: AppSettings.hpp  IWallpaperModule.hpp  JsonUtils.hpp  ModuleCatalog.hpp  ModuleInfo.hpp  ModuleLibrary.hpp  NativeBridge.hpp  Paths.hpp  SettingsSchemaValidator.hpp  WallpaperController.hpp  WebView2Host.hpp  ZipExtractor.hpp  desktop_host_resolver.hpp  desktop_wallpaper.hpp  wallpaper_host.hpp  win32_utils.hpp
include/wallpaper-host/: desktop_utils.hpp
lib/: wallpaper_host_static_mt.lib  wallpaper_host_static_mtd.lib
modules/black-hole/: module.json  schema.json  settings.json
modules/delaunay-flow/: module.exp  module.json  module.lib  schema.json  settings.json
modules/eclipse-frame/: module.exp  module.json  schema.json  settings.json
modules/fireflies/: module.json  schema.json  settings.json
modules/hypercube-harmony/: module.exp  module.json  schema.json  settings.json
modules/infinite-mirror/: module.exp  module.json  schema.json  settings.json
modules/shahr-flow/: module.exp  module.json  schema.json  settings.json
modules/star-simulator/: module.exp  module.json  schema.json  settings.json
modules/video/: module.json  schema.json  settings.json
modules/web-renderer/: module.json  schema.json  settings.json
qml/: main.qml
qml/components/: NotificationBanner.qml  NotificationManager.qml  SettingsGroup.qml  SettingsPanel.qml  WallpaperCard.qml
resources/: Animura.rc  qml.qrc
src/: AppSettings.cpp  JsonUtils.cpp  ModuleCatalog.cpp  ModuleLibrary.cpp  NativeBridge.cpp  Paths.cpp  SettingsSchemaValidator.cpp  WallpaperController.cpp  WebView2Host.cpp  ZipExtractor.cpp  desktop_host_resolver.cpp  desktop_wallpaper.cpp  main.cpp  wallpaper_host.cpp  win32_utils.cpp
